solved overflow

--- a/src/components/ColourSeparator/ColourSeparator.scss
+++ b/src/components/ColourSeparator/ColourSeparator.scss
@@ -15,7 +15,7 @@
     @media only screen and (min-width: 996px) {
        .ColourSeparator{
            height: 10vh;
-           margin: 1em 0;
+           margin-top: 0;
            rotate: -3deg;
        }
 
@@ -25,6 +25,7 @@
         .ColourSeparator{
             height: 20vh;
             margin-top: 0;
+
         }   
 
     }
